2001-05-30  Steven G. Johnson  <stevenj@alum.mit.edu>

	* aclang.m4 (AC_PROG_F77): Add Compaq's "fort" to the list of
	Fortran (95) compilers to check.

2001-05-29  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* doc/autoconf.texi (Introduction, Pointers): Update the Autoconf
	Macro Archive URL.

2001-05-23  Pavel Roskin  <proski@gnu.org>

	* aclang.m4 (AC_PROG_CPP): Use `break' instead of `break 2' since
	_AC_PROG_PREPROC_WORKS_IFELSE expands arguments outside the loop.
	(AC_PROG_CXXCPP): Likewise.

2001-05-22  Akim Demaille  <akim@epita.fr>

	* config: New directory.
	* configure.in: AC_CONFIG_AUX_DIR it.
	* tests/atspecific.m4 (AT_CONFIGURE_AC): Adjust.

2001-05-22  Akim Demaille  <akim@epita.fr>

	* autoconf.in, autoreconf.in, autoheader.in, autoscan.in, ifnames.in,
	* autoupdate.in: Specify the Emacs mode.
	* acversion.m4.in: Rename as...
	* acversion.m4: this.
	* tests/Makefile.am (CLEANFILES): More garbage.

2001-05-22  Akim Demaille  <akim@epita.fr>

	* autoconf.sh, autoreconf.sh, autoheader.sh, autoscan.pl, ifnames.sh:
	Rename as...
	* autoconf.in, autoreconf.in, autoheader.in, autoscan.in, ifnames.in:
	these.

2001-05-21  Akim Demaille  <akim@epita.fr>

	* configure.in: Bump to 2.50a.