@@ -32,6 +32,7 @@ Daniel Carroll              dan@mesastate.edu
 Daniele Arena               daniele@ripe.net
 Dave Adams                  adams@hpesdwa.fc.hp.com
 Dave Love                   fx@gnu.org
+David Carter                david@carter.net
 David Morgan                dmorgan@symark.com
 Derek R. Price              derek.price@openavenue.com
 Didier Desseaux             didess@infonie.fr
