@@ -1,3 +1,9 @@
+2001-05-31  Akim Demaille  <akim@epita.fr>
+
+	* tests/base.at, tests/m4sh.at: When using AC_PLAIN_SCRIPT be sure
+	to emit the bangshe line.
+	Reported by David Carter.
+
 2001-05-30  Steven G. Johnson  <stevenj@alum.mit.edu>
 
 	* aclang.m4 (AC_PROG_F77): Add Compaq's "fort" to the list of
